--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <a href="#open">Opening a new image</a></br>
 <a href="#save">Saving my work</a></br>
 <a href="#load">Loading previous work</a></br>
-<a href="#edit">Changing a label</a></br>
-<a href="#delete">Removing a badly marked out object</a></br>
+<a href="#edit">Editing a label</a></br>
+<a href="#delete">Deleting a marked object</a></br>
+<a href="#undo">Undoing a mistake</a></br>
+<a href="#shortcuts">Keyboard Shortcuts</a></br>
 
-<h3 id="getting_started">Somebody is holding my wife and child hostage is going to kill them unless I label an image.  How can I save my family?</h3>
+<h3 id="getting_started">How do I work this program?</h3>
 <p>Ok, to mark in image all you have to do is left click on the image.  The dots will be joined up automatically, once you have something that looks like this:</p>
 <img src="mark.png">
 <p>Just click on the starting point (marked red in the above image) and the object will be completed.  You will then be prompted to enter a label</p>
@@ -19,24 +21,34 @@
 
 
 
-<h3 id="open">I'm bored of looking at a van. What do I do?</h3>
+<h3 id="open">How do I open a new image?</h3>
 <img src="open.png">
 <p>Click on the button marked with a red spot in the above picture.  This will open a new window.  Just navigate to your file and double click it to open</p>
 
-<h3 id="save">I'm hungry.  I need to stop and eat  What should I do?</h3>
+<h3 id="save">How do I save my labelling?</h3>
 <img src="save.png">
 <p>You had better save your work then.  To do this click the button marked red in the above image.  This saves your labels.  Then click the X in the top right corner, this is marked green.  Bye Bye.</p>
 
-<h3 id="load">I've finished eating, now I'm ready to continue labelling.  How do I do this?</h3>
+<h3 id="load">How do I load my labelling?</h3>
 <img src="load.png">
 <p>To load the labels you have presiously tagged for an image all you need to do is hit the load button (marked red in the picture above).  Everything else is done for you.</p>
 
-<h3 id="edit">I fucked up.  I need to edit a label</h3>
+<h3 id="edit">How do I edit a label?</h3>
 <img src="edit.png">
 <p>To edit a label either right click on the labelled object, this is green in the above image.  Or select the label you want to edit in the list, this is marked blue in the above image and then press the edit button, this is marked red in the above image.  You will then be prompted for a new label</p>
 
-<h3 id="delete">I really fucked up.  I need to delete an object</h3>
+<h3 id="delete">How do I delete a marked object?</h3>
 <img src="delete.png">
 <p>First select the label in the list, this is marked blue.  Then press the delete button, this is marked red.  The object and label are now gone and you can redraw it correctly</p>
+</body>
+
+<h3 id="undo">How do I undo a mistake?</h3>
+<img src="">
+<p></p>
+</body>
+
+<h3 id="shortcuts">What keyboard shortcuts are there?</h3>
+<img src="">
+<p></p>
 </body>
 </html>
