need to get some more screenshots

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 </body>
 
 <h3 id="undo">How do I undo a mistake?</h3>
-<img src="">
+<img src="undo1.png">
+<img src="undo2.png">
 <p></p>
 </body>
 
 <h3 id="shortcuts">What keyboard shortcuts are there?</h3>
-<img src="">
 <p></p>
 </body>
 </html>
