--- a/index.html
+++ b/index.html
@@ -44,11 +44,21 @@
 
 <h3 id="undo">How do I undo a mistake?</h3>
 <img src="undo1.png">
+<p>If you have made a mistake but not yet completed the marking of an object all you need to do is right click and the last node will be removed.</p>
 <img src="undo2.png">
-<p></p>
 </body>
 
 <h3 id="shortcuts">What keyboard shortcuts are there?</h3>
-<p></p>
+<ol>
+ <li>Open - Ctrl+O</li>
+ <li>Save - Ctrl+S</li>
+ <li>Load - Ctrl+L</li>
+ <li>Help - Ctrl+H</li>
+ <li>Edit - Ctrl+E</li>
+ <li>Delete - Ctrl+Del</li>
+ <li>Undo - Ctrl+Z</li>
+ <li>Focus on labels - Right Arrow</li>
+ <li>Navigate Labels - Up and Down Arrows</li>
+ </ol>
 </body>
 </html>
